# homework

./: .gitignore  pyproject.toml
spce5085/a1/: Makefile  assignment_1.ipynb  carrico_spce5085_a1.ipynb  carrico_spce5085_a1.tex
spce5085/a2/: carrico_spce5085_a2.ipynb  carrico_spce5085_a2.tex
spce5085/a3/: carrico_spce5085.ipynb  carrico_spce5085_a3.ipynb  carrico_spce5085_a3.tex
spce5085/a4/: carrico_spce5085_a4.ipynb  carrico_spce5085_a4.tex
template/: template.tex
